--- a/stylesheet.css
+++ b/stylesheet.css
@@ -83,15 +83,16 @@ a {
 header {
   height: 65px;
   width: 100%;
-  background-color: rgba(34, 49, 52, 0.9);
+  background-color:#fff;
   position :fixed;
   top: 0;
   z-index: 10;
 }
 
 .logo {
-  width: 124px;
-  margin-top: 20px;
+  width: 230px;
+  float: left;
+  padding: 5px 40px;
 }
 
 .header-left {
@@ -104,16 +105,23 @@ header {
 }
 
 .header-right a {
+  font-size: 25px;
   line-height: 65px;
   padding: 0 25px;
-  color: white;
+  color:rgb(16, 177, 70);
   display: block;
   float: left;
   transition: all 0.5s;
 }
 
+
 .header-right a:hover {
-  background-color: rgba(255, 255, 255, 0.3);
+  color:rgb(25, 124, 58);
+}
+
+.contact:hover{
+  background-color: rgba(13, 179, 68, 0.6);
+  color:white;
 }
 
 .menu-icon{
