--- a/stylesheet.css
+++ b/stylesheet.css
@@ -197,16 +197,24 @@ header {
   box-shadow: none;
 }
 
+.footer-list a {
+  font-size: 16px;
+  color:#b3aeb5;
+}
+
 footer img {
-  width: 125px;
+  width: 100px;
+  padding-left: 20px;
 }
 
 footer p {
   color: #b3aeb5;
   font-size: 12px;
+  text-align: center;
 }
 
 footer {
-  padding-top: 30px;
+  padding-top: 20px;
   padding-bottom: 20px;
+  padding-left: 60px;
 }
