top wrapper - background-image

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,10 +23,10 @@ a {
 
 .top-wrapper {
   padding: 180px 0 100px 0;
-  background-image: url(https://prog-8.com/images/html/advanced/top_en.png);
+  background-image: url(assets/img/left-hand.jpg);
   background-size: cover;
-  color: white;
-  text-align: center;
+  color: #0a5e38;
+  text-align: right;
 }
 
 .top-wrapper h1 {
