--- a/stylesheet.css
+++ b/stylesheet.css
@@ -183,6 +183,10 @@ header {
   color: white;
 }
 
+.lesson-icon img{
+  width: 50%;
+}
+
 .text-contents {
   width: 80%;
   display: inline-block;
