--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -22,10 +22,19 @@
 
   footer {
     text-align: center;
+    width: 100%;
+    padding: 0;
   }
 
   .btn {
     width: 100%;
+  }
+
+  .animation {
+    width: 50%;
+    padding: 0;
+    margin: 200px 20px 20px 20px;
+    text-align: center;
   }
 
   .facebook {
@@ -52,10 +61,8 @@
   .top-wrapper p {
     font-size: 14px;
     line-height: 20px;
+    color: black;
   }
 
-  footer{
-    width: 100%;
-    padding: 0;
-  }
+  
 }
