--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,12 @@
+html, body, ul, ol, li, h1, h2, h3, h4, h5, h6, p, div {
+    margin: 0;
+    padding: 0;
+}
+
+* {
+    box-sizing: border-box;
+}
+
 /* Header Style */
 .fa {
   margin-right: 5px;
