--- a/responsive.css
+++ b/responsive.css
@@ -1,5 +1,8 @@
 /* For Tablets */
 @media all and (max-width: 1000px) {
+  .animation{
+  visibility:hidden;
+  }
   .lesson {
     width: 50%;
     margin-bottom: 50px;
