--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -157,7 +157,7 @@ header {
   float: right;
   font-size: 25px;
   padding: 21px 0;
-  display: none !important;
+  display: none;
   cursor:pointer;
 }
 
