--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,8 @@
 /* Header Style */
+* {
+  box-sizing: border-box;
+}
+
 .fa {
   margin-right: 5px;
 }
@@ -58,13 +62,8 @@ header {
   display: none;
 }
 
-
 html {
   scroll-behavior: smooth;
-}
-
-* {
-  box-sizing: border-box;
 }
 
 body {
@@ -87,7 +86,8 @@ a {
 }
 .animation{
   position: absolute;
-  width:150px;
+  width:50px;
+  height: 10px;
   animation-name: gogreen;
   animation-duration: 10s;
   animation-iteration-count: infinite;
@@ -175,9 +175,14 @@ a {
   padding-top: 80px;
   padding-bottom: 50px;
   color: #5f5d60;
+  text-align: center;
 }
 
 .heading h2 {
+  font-weight: normal;
+}
+
+.heading h3 {
   font-weight: normal;
 }
 
@@ -209,13 +214,9 @@ a {
   color: #b3aeb5;
 }
 
-.heading h3 {
-  font-weight: normal;
-}
-
 .message-wrapper {
   border-bottom: 1px solid #eee;
-  padding-bottom: 40px;
+  padding-bottom: 20px;
   text-align: center;
 }
 
@@ -235,6 +236,7 @@ a {
 .footer-list a {
   font-size: 16px;
   color:#b3aeb5;
+  display: inline;
 }
 
 footer img {
